Improve String formatting in PaymentService implementation.